--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,15 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">560</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test1</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,570</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Test2</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">4</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">16,571</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">Attribuets</td><td><a href="#m0">ProductPage</a></td><td rowspan="1">1701775629508</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m1">delay</a></td><td rowspan="1">1701775628972</td><td rowspan="1">524</td></tr><tr class="passedeven"><td><a href="#m2">login</a></td><td rowspan="3">1701775629503</td><td rowspan="3">1</td></tr><tr class="passedeven"><td><a href="#m3">login</a></td></tr><tr class="passedeven"><td><a href="#m4">login</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">data.Attribuets</td><td><a href="#m0">verifyWithValidlogin</a></td><td rowspan="1">1701948526632</td><td rowspan="1">1</td></tr><tr class="passedodd"><td rowspan="1">data.Hirec</td><td><a href="#m1">verifyWithValidlogin</a></td><td rowspan="1">1701948522839</td><td rowspan="1">1952</td></tr><tr class="passedeven"><td rowspan="1">data.demo</td><td><a href="#m2">verifyWithValidlogin</a></td><td rowspan="1">1701948513110</td><td rowspan="1">2805</td></tr><tr class="passedodd"><td rowspan="1">data.login</td><td><a href="#m3">verifyWithValidlogin</a></td><td rowspan="1">1701948517800</td><td rowspan="1">2872</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4" class="invisible"/></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Attribuets#ProductPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Attribuets#delay</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Attribuets#login</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>prasanna</td><td>kumar123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Attribuets#login</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>kumar</td><td>pw123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">Attribuets#login</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>rajesh</td><td>raj123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-</body>
+<h2>Test1</h2><h3 id="m0">data.Attribuets#verifyWithValidlogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>admin@yourstore.com</td><td>admin</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">data.Hirec#verifyWithValidlogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>admin@yourstore.com</td><td>admin</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">data.demo#verifyWithValidlogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>admin@yourstore.com</td><td>admin</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">data.login#verifyWithValidlogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>admin@yourstore.com</td><td>admin</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test2</h2></body>
 </html>
